# tardigrade_micromorphic_tools

./: .gitignore  CMakeLists.txt  README.rst  environment.txt
.github/workflows/: github-test.yml
docs/doxygen/: CMakeLists.txt
docs/html/: index.html
docs/sphinx/: CMakeLists.txt  changelog.rst  conf.py.in  dependencies.txt  targets.txt
recipe/: conda_build_config.yaml  meta.yaml
src/cpp/: CMakeLists.txt  tardigrade_micromorphic_tools.cpp  tardigrade_micromorphic_tools.h
src/cpp/tests/: CMakeLists.txt  test_tardigrade_micromorphic_tools.cpp
